Added semester number in html-file

--- a/org.eclipse.acceleo.module.sample/Studyplan.html
+++ b/org.eclipse.acceleo.module.sample/Studyplan.html
@@ -19,7 +19,7 @@ table {
 <h1>Master informatics</h1>
 <hr>
 	<h2>Software</h2>
-		<h4>Autumn</h4>
+		<h3>Autumn (semester 1)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -104,7 +104,7 @@ table {
 				<td>VB</td> 
 			</tr>
 		</table>
-		<h4>Spring</h4>
+		<h3>Spring (semester 2)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -159,7 +159,7 @@ table {
 			<th>Type</th>
 		</tr>
 		</table>
-		<h4>Autumn</h4>
+		<h3>Autumn (semester 3)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -202,7 +202,7 @@ table {
 				<td>VA</td> 
 			</tr>
 		</table>
-		<h4>Spring</h4>
+		<h3>Spring (semester 4)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -228,7 +228,7 @@ table {
 		</tr>
 		</table>
 	<h2>Interaction Design, Game and Learning Technology</h2>
-		<h4>Autumn</h4>
+		<h3>Autumn (semester 1)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -301,7 +301,7 @@ table {
 				<td>VB</td> 
 			</tr>
 		</table>
-		<h4>Spring</h4>
+		<h3>Spring (semester 2)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -404,7 +404,7 @@ table {
 				<td>VB</td> 
 			</tr>
 		</table>
-		<h4>Autumn</h4>
+		<h3>Autumn (semester 3)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
@@ -465,7 +465,7 @@ table {
 				<td>VB</td> 
 			</tr>
 		</table>
-		<h4>Spring</h4>
+		<h3>Spring (semester 4)</h3>
 		<p>Mandatory Courses</p>
 		<table>
 		<tr>
