Added multiple constraints

--- a/org.eclipse.acceleo.module.sample/Studyplan.html
+++ b/org.eclipse.acceleo.module.sample/Studyplan.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>Master informaticsBachelorCourses</title>
+<title>Master informaticsCourses</title>
 <style>
 body {
 	font-family: "open sans", arial, sans-serif;
@@ -144,10 +144,16 @@ table {
 					<td>M1A</td> 
 				</tr>
 				<tr>
-					<td class="code-name">EXPERT</td>
-					<td class="code-name">Experts in Teamwork </td>
+					<td class="code-name">EXPERT0001</td>
+					<td class="code-name">Experts in Teamwork 1 </td>
 					<td>7.5</td>
-					<td>VA</td> 
+					<td>EIT</td> 
+				</tr>
+				<tr>
+					<td class="code-name">EXPERT0002</td>
+					<td class="code-name">Experts in Teamwork 2 </td>
+					<td>7.5</td>
+					<td>EIT</td> 
 				</tr>
 			</table>
 			<p>Elective Courses</p>
@@ -335,6 +341,27 @@ table {
 					<td>M1A</td> 
 				</tr>
 				<tr>
+					<td class="code-name">EXPERT0001</td>
+					<td class="code-name">Experts in Teamwork 1 </td>
+					<td>7.5</td>
+					<td>EIT</td> 
+				</tr>
+				<tr>
+					<td class="code-name">EXPERT0002</td>
+					<td class="code-name">Experts in Teamwork 2 </td>
+					<td>7.5</td>
+					<td>EIT</td> 
+				</tr>
+			</table>
+			<p>Elective Courses</p>
+			<table>
+			<tr>
+				<th>Code</th>
+				<th>Name</th>
+				<th>Credits</th>
+				<th>Type</th>
+			</tr>
+				<tr>
 					<td class="code-name">IT3022</td>
 					<td class="code-name">Participatory design </td>
 					<td>7.5</td>
@@ -370,21 +397,6 @@ table {
 					<td>7.5</td>
 					<td>VA</td> 
 				</tr>
-				<tr>
-					<td class="code-name">EXPERT</td>
-					<td class="code-name">Experts in Teamwork </td>
-					<td>7.5</td>
-					<td>VA</td> 
-				</tr>
-			</table>
-			<p>Elective Courses</p>
-			<table>
-			<tr>
-				<th>Code</th>
-				<th>Name</th>
-				<th>Credits</th>
-				<th>Type</th>
-			</tr>
 				<tr>
 					<td class="code-name">TDT4171</td>
 					<td class="code-name">Artificial Intelligence Methods </td>
@@ -490,8 +502,6 @@ table {
 				<th>Type</th>
 			</tr>
 			</table>
-	<h1>Bachelor</h1>
-	<hr>
 </body>
 </head>
 </html>
